--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="Discover Gire Construction, a leading Liberty, Texas-based construction company offering top-quality concrete, fencing, land clearing, and general construction services. Our experienced team delivers exceptional craftsmanship and expertise to all our clients. From precision concrete work to efficient land clearing and comprehensive construction solutions, we bring your vision to life. Click through to learn more about our services and experience the reliability of Gire Construction in bringing your construction projects to fruition."
+    />
     <title>Gire Construction</title>
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
   </head>
