--- a/index.html
+++ b/index.html
@@ -3,15 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="Description"
       content="Discover Gire Construction, a leading Liberty, Texas-based construction company offering top-quality concrete, fencing, land clearing, and general construction services. Our experienced team delivers exceptional craftsmanship and expertise to all our clients. From precision concrete work to efficient land clearing and comprehensive construction solutions, we bring your vision to life. Click through to learn more about our services and experience the reliability of Gire Construction in bringing your construction projects to fruition."
     />
-    <title>Gire Construction</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+    <title>Gire Construction</title>
   </head>
 
   <body>
-    <script src="/assets/js/script.js"></script>
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Gire Construction</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
+          aria-controls="navbar"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-item nav-link custom-nav-link" href="#">About Us</a>
+            <a class="nav-item nav-link custom-nav-link" href="#">Services</a>
+            <a class="nav-item nav-link custom-nav-link" href="#">Gallery</a>
+            <a class="nav-item nav-link custom-nav-link" href="#">Contact Us</a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </body>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
+  <script src="/assets/js/script.js"></script>
 </html>
