--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
         </div>
       </div>
     </nav>
+    <header class="p-5 mb-4">
+      <div class="container">
+        <div class="row align-items-end">
+          <div class="col-12 col-md-6">
+            <img />
+          </div>
+          <div class="col-12 col-md-6">
+            <h1>Gire Construction</h1>
+            <p>
+              Discover Gire Construction, a leading Liberty, Texas-based
+              construction company offering top-quality concrete, fencing, land
+              clearing, and general construction services. Our experienced team
+              delivers exceptional craftsmanship and expertise to all our
+              clients. From precision concrete work to efficient land clearing
+              and comprehensive construction solutions, we bring your vision to
+              life. Click through to learn more about our services and
+              experience the reliability of Gire Construction in bringing your
+              construction projects to fruition.
+            </p>
+            <button class="btn btn-primary">Learn more.</button>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
