--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
       </div>
     </nav>
+
     <header class="p-5 mb-4">
       <div class="container">
         <div class="row align-items-end">
@@ -67,6 +68,51 @@
         </div>
       </div>
     </header>
+
+    <main class="container-fluid services">
+      <section class="row">
+        <div class="col-12 col-md-9">
+          <h2 class="my-4 mx-1">Our Services</h2>
+
+          <section class="row justify-content-around">
+            <div class="col-12 col-sm-6 col-lg-4 mb-3 ml-1">
+              <div class="card">
+                <h3 class="card-header">Construction</h3>
+                <div class="card-body">
+                  <!-- Image or desc or both -->
+                  <button class="btn btn-block btn-info">Learn more.</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4 mb-3">
+              <div class="card">
+                <h3 class="card-header">Concrete</h3>
+                <div class="card-body">
+                  <!-- Image or desc or both -->
+                  <button class="btn btn-block btn-info">Learn more.</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4 mb-3">
+              <div class="card">
+                <h3 class="card-header">Land Clearing</h3>
+                <div class="card-body">
+                  <!-- Image or desc or both -->
+                  <button class="btn btn-block btn-info">Learn more.</button>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="col-12 col-md-3">
+          <h2></h2>
+          <p></p>
+        </div>
+      </section>
+
+      <hr />
+      <!-- justify-content-center changes the alignment of flex items to center axis -->
+    </main>
   </body>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
