--- a/index.html
+++ b/index.html
@@ -14,14 +14,28 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Open+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
     <title>Gire Construction</title>
+
+    <link rel="icon" type="image/png" href="/assets/img/frontloader-logo.png" />
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Gire Construction</a>
+        <a class="navbar-brand" href="#">
+          <img
+            src="/assets/img/gire-nav-logo.png"
+            alt="Gire Construction Logo"
+            height="60"
+          />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,10 +49,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav ms-auto">
-            <a class="nav-item nav-link custom-nav-link" href="#">About Us</a>
-            <a class="nav-item nav-link custom-nav-link" href="#">Services</a>
-            <a class="nav-item nav-link custom-nav-link" href="#">Gallery</a>
-            <a class="nav-item nav-link custom-nav-link" href="#">Contact Us</a>
+            <a class="nav-item nav-link custom-nav-link" href="#">ABOUT US</a>
+            <a class="nav-item nav-link custom-nav-link" href="#">SERVICES</a>
+            <a class="nav-item nav-link custom-nav-link" href="#">GALLERY</a>
+            <a class="nav-item nav-link custom-nav-link" href="#">CONTACT</a>
           </div>
         </div>
       </div>
@@ -63,7 +77,7 @@
               experience the reliability of Gire Construction in bringing your
               construction projects to fruition.
             </p>
-            <button class="btn btn-primary">Learn more.</button>
+            <button class="btn btn-warning">Learn more.</button>
           </div>
         </div>
       </div>
@@ -80,7 +94,7 @@
                 <h3 class="card-header">Construction</h3>
                 <div class="card-body">
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-info">Learn more.</button>
+                  <button class="btn btn-block btn-warning">Learn more.</button>
                 </div>
               </div>
             </div>
@@ -89,7 +103,7 @@
                 <h3 class="card-header">Concrete</h3>
                 <div class="card-body">
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-info">Learn more.</button>
+                  <button class="btn btn-block btn-warning">Learn more.</button>
                 </div>
               </div>
             </div>
@@ -98,7 +112,7 @@
                 <h3 class="card-header">Land Clearing</h3>
                 <div class="card-body">
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-info">Learn more.</button>
+                  <button class="btn btn-block btn-warning">Learn more.</button>
                 </div>
               </div>
             </div>
