nav icons/styling

--- a/index.html
+++ b/index.html
@@ -50,9 +50,16 @@
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav ms-auto">
             <a class="nav-item nav-link custom-nav-link" href="#">ABOUT US</a>
-            <a class="nav-item nav-link custom-nav-link" href="#">SERVICES</a>
+            <a class="nav-item nav-link custom-nav-link" href="#"
+              >SERVICES<span class="caret"
+                ><img src="assets/img/caret-down-fill.svg" /></span
+            ></a>
             <a class="nav-item nav-link custom-nav-link" href="#">GALLERY</a>
             <a class="nav-item nav-link custom-nav-link" href="#">CONTACT</a>
+            <a class="nav-item nav-link custom-nav-link" href="tel:123-456-7890"
+              ><span><img src="/assets/img/telephone-fill.svg" /></span>
+              (123)456-7890</a
+            >
           </div>
         </div>
       </div>
