--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
             <img />
           </div>
           <div class="col-12 col-md-6">
-            <h1>Gire Construction</h1>
+            <img
+              class="landingName mb-3"
+              src="assets/img/GireName.png"
+              alt="Gire Construction Brand"
+            />
             <p>
               Discover Gire Construction, a leading Liberty, Texas-based
               construction company offering top-quality concrete, fencing, land
               clearing, and general construction services. Our experienced team
               delivers exceptional craftsmanship and expertise to all our
-              clients. From precision concrete work to efficient land clearing
-              and comprehensive construction solutions, we bring your vision to
-              life. Click through to learn more about our services and
-              experience the reliability of Gire Construction in bringing your
-              construction projects to fruition.
+              clients.
             </p>
             <button class="btn btn-warning">Learn more.</button>
           </div>
