--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
     <title>Gire Construction</title>
 
-    <link rel="icon" type="image/png" href="/assets/img/frontloader-logo.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/img/icons/frontloader-logo.png"
+    />
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#" style="margin-left: 1.5rem">
           <img
             src="/assets/img/gire-nav-logo.png"
             alt="Gire Construction Logo"
@@ -52,12 +56,12 @@
             <a class="nav-item nav-link custom-nav-link" href="#">ABOUT US</a>
             <a class="nav-item nav-link custom-nav-link" href="#"
               >SERVICES<span class="caret"
-                ><img src="assets/img/caret-down-fill.svg" /></span
+                ><img src="assets/img/icons/caret-down-fill.svg" /></span
             ></a>
             <a class="nav-item nav-link custom-nav-link" href="#">GALLERY</a>
             <a class="nav-item nav-link custom-nav-link" href="#">CONTACT</a>
             <a class="nav-item nav-link custom-nav-link" href="tel:123-456-7890"
-              ><span><img src="/assets/img/telephone-fill.svg" /></span>
+              ><span><img src="/assets/img/icons/telephone-fill.svg" /></span>
               (123)456-7890</a
             >
           </div>
@@ -69,7 +73,35 @@
       <div class="container">
         <div class="row align-items-end">
           <div class="col-12 col-md-6">
-            <img />
+            <div
+              id="carouselExampleSlidesOnly"
+              class="carousel slide"
+              data-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    class="d-block w-100"
+                    src="/assets/img/carousel/george-pastushok-d0yNnTEjEWY-unsplash.jpg"
+                    alt="First slide"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    class="d-block w-100"
+                    src="/assets/img/carousel/greyson-joralemon-A1g0oeX29ec-unsplash.jpg"
+                    alt="Second slide"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    class="d-block w-100"
+                    src="/assets/img/carousel/marek-novotny-sAYjHNsD0rI-unsplash.jpg"
+                    alt="Third slide"
+                  />
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-12 col-md-6">
             <img
@@ -126,8 +158,14 @@
           </section>
         </div>
         <div class="col-12 col-md-3">
-          <h2></h2>
-          <p></p>
+          <h2>Our Services</h2>
+          <p>
+            From precision concrete work to efficient land clearing and
+            comprehensive construction solutions, we bring your vision to life.
+            Click through to learn more about our services and experience the
+            reliability of Gire Construction in bringing your construction
+            projects to fruition.
+          </p>
         </div>
       </section>
 
@@ -136,11 +174,8 @@
     </main>
   </body>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="/assets/js/script.js"></script>
 </html>
