--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       content="Discover Gire Construction, a leading Liberty, Texas-based construction company offering top-quality concrete, fencing, land clearing, and general construction services. Our experienced team delivers exceptional craftsmanship and expertise to all our clients. From precision concrete work to efficient land clearing and comprehensive construction solutions, we bring your vision to life. Click through to learn more about our services and experience the reliability of Gire Construction in bringing your construction projects to fruition."
     />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -69,43 +69,50 @@
       </div>
     </nav>
 
-    <header class="p-5 mb-4">
-      <div class="container">
+    <header class="p-4 p-l-5 mb-4">
+      <div class="container-fluid">
         <div class="row align-items-end">
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-md-7">
             <div
               id="carouselExampleSlidesOnly"
               class="carousel slide"
-              data-ride="carousel"
+              data-bs-ride="carousel"
             >
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    class="d-block w-100"
                     src="/assets/img/carousel/george-pastushok-d0yNnTEjEWY-unsplash.jpg"
-                    alt="First slide"
+                    class="d-block w-100"
+                    alt="..."
                   />
                 </div>
                 <div class="carousel-item">
                   <img
+                    src="/assets/img/carousel/milivoj-kuhar-Te48TPzdcU8-unsplash.jpg"
                     class="d-block w-100"
-                    src="/assets/img/carousel/greyson-joralemon-A1g0oeX29ec-unsplash.jpg"
-                    alt="Second slide"
+                    alt="..."
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    class="d-block w-100"
                     src="/assets/img/carousel/marek-novotny-sAYjHNsD0rI-unsplash.jpg"
-                    alt="Third slide"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/img/carousel/samuel-cruz-m7JngCMSQvc-unsplash.jpg"
+                    class="d-block w-100"
+                    alt="..."
                   />
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-md-5 mt-3">
             <img
-              class="landingName mb-3"
+              class="landingName mb-2"
               src="assets/img/GireName.png"
               alt="Gire Construction Brand"
             />
@@ -124,9 +131,7 @@
 
     <main class="container-fluid services">
       <section class="row">
-        <div class="col-12 col-md-9">
-          <h2 class="my-4 mx-1">Our Services</h2>
-
+        <div class="col-12 col-md-9 p-3">
           <section class="row justify-content-around">
             <div class="col-12 col-sm-6 col-lg-4 mb-3 ml-1">
               <div class="card">
@@ -157,7 +162,7 @@
             </div>
           </section>
         </div>
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-3 p-3">
           <h2>Our Services</h2>
           <p>
             From precision concrete work to efficient land clearing and
@@ -174,8 +179,12 @@
     </main>
   </body>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"
+  ></script>
   <script src="/assets/js/script.js"></script>
 </html>
+x
