carousel finishing responsive

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 
     <header class="p-4 p-l-5 mb-4">
-      <div class="container-fluid">
+      <div class="container-fluid p-sm-4">
         <div class="row align-items-end">
           <div class="col-12 col-md-7">
             <div
