nav responsive layout

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#" style="margin-left: 1.5rem">
           <img
+            class="img-responsive"
             src="/assets/img/gire-nav-logo.png"
             alt="Gire Construction Logo"
             height="60"
