service-card layout

--- a/index.html
+++ b/index.html
@@ -130,41 +130,66 @@
       </div>
     </header>
 
-    <main class="container-fluid services">
-      <section class="row">
+    <main class="container-fluid">
+      <section class="row services">
         <div class="col-12 col-md-9 p-3">
           <section class="row justify-content-around">
-            <div class="col-12 col-sm-6 col-lg-4 mb-3 ml-1">
-              <div class="card">
-                <h3 class="card-header">Construction</h3>
+            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3 ml-1">
+              <div class="card border-0">
+                <img
+                  class="card-img-top"
+                  src="/assets/img/services/plans.jpg"
+                  alt="Card image cap"
+                />
                 <div class="card-body">
+                  <h5 class="card-title open-sans">General Construction</h5>
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-warning">Learn more.</button>
+                  <button class="btn btn-block btn-warning my-2">
+                    Learn more
+                  </button>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 mb-3">
-              <div class="card">
-                <h3 class="card-header">Concrete</h3>
+            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3">
+              <div class="card border-0">
+                <img class="card-img-top" src="" alt="Card image cap" />
                 <div class="card-body">
+                  <h5 class="card-title open-sans">Concrete</h5>
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-warning">Learn more.</button>
+                  <button class="btn btn-block btn-warning my-2">
+                    Learn more
+                  </button>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 mb-3">
-              <div class="card">
-                <h3 class="card-header">Land Clearing</h3>
+            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3">
+              <div class="card border-0">
+                <img class="card-img-top" src="" alt="Card image cap" />
                 <div class="card-body">
+                  <h5 class="card-title open-sans">Land Clearing</h5>
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-warning">Learn more.</button>
+                  <button class="btn btn-block btn-warning my-2">
+                    Learn more
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3">
+              <div class="card border-0">
+                <img class="card-img-top" src="" alt="Card image cap" />
+                <div class="card-body">
+                  <h5 class="card-title open-sans">Land Clearing</h5>
+                  <!-- Image or desc or both -->
+                  <button class="btn btn-block btn-warning my-2">
+                    Learn more
+                  </button>
                 </div>
               </div>
             </div>
           </section>
         </div>
         <div class="col-12 col-md-3 p-3">
-          <h2>Our Services</h2>
+          <h2 class="servicesHeader">Our Services</h2>
           <p>
             From precision concrete work to efficient land clearing and
             comprehensive construction solutions, we bring your vision to life.
@@ -176,6 +201,7 @@
       </section>
 
       <hr />
+      <section></section>
       <!-- justify-content-center changes the alignment of flex items to center axis -->
     </main>
   </body>
@@ -188,4 +214,3 @@
   ></script>
   <script src="/assets/js/script.js"></script>
 </html>
-x
