services layout/responsive

--- a/index.html
+++ b/index.html
@@ -124,14 +124,15 @@
               delivers exceptional craftsmanship and expertise to all our
               clients.
             </p>
-            <button class="btn btn-warning">Learn more.</button>
+            <button class="btn btn-warning">Get A Quote</button>
           </div>
         </div>
       </div>
     </header>
 
     <main class="container-fluid">
-      <section class="row services">
+      <section class="row services py-4">
+        <h2 class="servicesHeader d-block d-md-none">Our Services</h2>
         <div class="col-12 col-md-9 p-3">
           <section class="row justify-content-around">
             <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3 ml-1">
@@ -144,9 +145,11 @@
                 <div class="card-body">
                   <h5 class="card-title open-sans">General Construction</h5>
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-warning my-2">
-                    Learn more
-                  </button>
+                  <div class="d-flex justify-content-end">
+                    <button class="btn btn-block btn-warning my-2">
+                      Learn more
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -156,9 +159,11 @@
                 <div class="card-body">
                   <h5 class="card-title open-sans">Concrete</h5>
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-warning my-2">
-                    Learn more
-                  </button>
+                  <div class="d-flex justify-content-end">
+                    <button class="btn btn-block btn-warning my-2">
+                      Learn more
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -168,9 +173,11 @@
                 <div class="card-body">
                   <h5 class="card-title open-sans">Land Clearing</h5>
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-warning my-2">
-                    Learn more
-                  </button>
+                  <div class="d-flex justify-content-end">
+                    <button class="btn btn-block btn-warning my-2">
+                      Learn more
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -180,16 +187,18 @@
                 <div class="card-body">
                   <h5 class="card-title open-sans">Land Clearing</h5>
                   <!-- Image or desc or both -->
-                  <button class="btn btn-block btn-warning my-2">
-                    Learn more
-                  </button>
+                  <div class="d-flex justify-content-end">
+                    <button class="btn btn-block btn-warning my-2">
+                      Learn more
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
           </section>
         </div>
         <div class="col-12 col-md-3 p-3">
-          <h2 class="servicesHeader">Our Services</h2>
+          <h2 class="servicesHeader d-none d-md-block">Our Services</h2>
           <p>
             From precision concrete work to efficient land clearing and
             comprehensive construction solutions, we bring your vision to life.
