styling:nav/layout/button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" style="margin-left: 1.5rem">
           <img
@@ -135,7 +135,7 @@
         <h2 class="servicesHeader d-block d-md-none">Our Services</h2>
         <div class="col-12 col-md-9 p-3">
           <section class="row justify-content-around">
-            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3 ml-1">
+            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3 mb-3 ml-1">
               <div class="card border-0">
                 <img
                   class="card-img-top"
@@ -153,9 +153,13 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3 mb-3">
               <div class="card border-0">
-                <img class="card-img-top" src="" alt="Card image cap" />
+                <img
+                  class="card-img-top"
+                  src="/assets/img/services/640-pouring-cement-during-for-construction.jpg"
+                  alt="Card image cap"
+                />
                 <div class="card-body">
                   <h5 class="card-title open-sans">Concrete</h5>
                   <!-- Image or desc or both -->
@@ -167,7 +171,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3 mb-3">
               <div class="card border-0">
                 <img class="card-img-top" src="" alt="Card image cap" />
                 <div class="card-body">
@@ -181,7 +185,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3 mb-3">
               <div class="card border-0">
                 <img class="card-img-top" src="" alt="Card image cap" />
                 <div class="card-body">
@@ -208,9 +212,7 @@
           </p>
         </div>
       </section>
-
-      <hr />
-      <section></section>
+      <section class="row py-4"></section>
       <!-- justify-content-center changes the alignment of flex items to center axis -->
     </main>
   </body>
