--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                   <h5 class="card-title open-sans">General Construction</h5>
                   <!-- Image or desc or both -->
                   <div class="d-flex justify-content-end">
-                    <button class="btn btn-block btn-warning my-2">
+                    <!-- <button class="btn btn-block btn-warning my-2">
                       Learn more
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
@@ -164,9 +164,9 @@
                   <h5 class="card-title open-sans">Concrete</h5>
                   <!-- Image or desc or both -->
                   <div class="d-flex justify-content-end">
-                    <button class="btn btn-block btn-warning my-2">
+                    <!-- <button class="btn btn-block btn-warning my-2">
                       Learn more
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
@@ -178,9 +178,9 @@
                   <h5 class="card-title open-sans">Land Clearing</h5>
                   <!-- Image or desc or both -->
                   <div class="d-flex justify-content-end">
-                    <button class="btn btn-block btn-warning my-2">
+                    <!-- <button class="btn btn-block btn-warning my-2">
                       Learn more
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
@@ -192,9 +192,9 @@
                   <h5 class="card-title open-sans">Land Clearing</h5>
                   <!-- Image or desc or both -->
                   <div class="d-flex justify-content-end">
-                    <button class="btn btn-block btn-warning my-2">
+                    <!-- <button class="btn btn-block btn-warning my-2">
                       Learn more
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
