--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Open+Sans:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Arvo&family=Bodoni+Moda&family=Cormorant+Garamond&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans:wght@300;400;700&family=Playfair&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
@@ -135,66 +135,80 @@
         <h2 class="servicesHeader d-block d-md-none">Our Services</h2>
         <div class="col-12 col-md-9 p-3">
           <section class="row justify-content-around">
-            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3 mb-3 ml-1">
-              <div class="card border-0">
+            <div class="col-12 col-sm-6 mb-3">
+              <div class="card border-0 bg-inverse">
                 <img
                   class="card-img-top"
                   src="/assets/img/services/plans.jpg"
                   alt="Card image cap"
                 />
-                <div class="card-body">
-                  <h5 class="card-title open-sans">General Construction</h5>
-                  <!-- Image or desc or both -->
-                  <div class="d-flex justify-content-end">
-                    <!-- <button class="btn btn-block btn-warning my-2">
-                      Learn more
-                    </button> -->
+                <div
+                  class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
+                >
+                  <div class="overlay mb-0 p-2">
+                    <h4 class="card-title text-light gar">
+                      General Construction
+                    </h4>
+                    <div class="card-text text-center text-light mons -b-1">
+                      Residential, Commercial, Renovation, and Remodeling
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3 mb-3">
-              <div class="card border-0">
+            <div class="col-12 col-sm-6 mb-3">
+              <div class="card border-0 bg-inverse">
                 <img
                   class="card-img-top"
                   src="/assets/img/services/640-pouring-cement-during-for-construction.jpg"
                   alt="Card image cap"
                 />
-                <div class="card-body">
-                  <h5 class="card-title open-sans">Concrete</h5>
-                  <!-- Image or desc or both -->
-                  <div class="d-flex justify-content-end">
-                    <!-- <button class="btn btn-block btn-warning my-2">
-                      Learn more
-                    </button> -->
+                <div
+                  class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
+                >
+                  <div class="overlay mb-0 p-2">
+                    <h4 class="card-title text-light gar">Concrete</h4>
+                    <div class="card-text text-center text-light mons -b-1">
+                      Foundations, Driveways, Patios, and Walkways
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3 mb-3">
-              <div class="card border-0">
-                <img class="card-img-top" src="" alt="Card image cap" />
-                <div class="card-body">
-                  <h5 class="card-title open-sans">Land Clearing</h5>
-                  <!-- Image or desc or both -->
-                  <div class="d-flex justify-content-end">
-                    <!-- <button class="btn btn-block btn-warning my-2">
-                      Learn more
-                    </button> -->
+            <div class="col-12 col-sm-6 mb-3">
+              <div class="card border-0 bg-inverse">
+                <img
+                  class="card-img-top"
+                  src="/assets/img/services/640-pouring-cement-during-for-construction.jpg"
+                  alt="Card image cap"
+                />
+                <div
+                  class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
+                >
+                  <div class="overlay mb-0 p-2">
+                    <h4 class="card-title text-dark gar">Land Clearing</h4>
+                    <div class="card-text text-center text-light mons -b-1">
+                      Foundations, Driveways, Patios, and Walkways
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 col-xxl-3 mb-3">
-              <div class="card border-0">
-                <img class="card-img-top" src="" alt="Card image cap" />
-                <div class="card-body">
-                  <h5 class="card-title open-sans">Land Clearing</h5>
-                  <!-- Image or desc or both -->
-                  <div class="d-flex justify-content-end">
-                    <!-- <button class="btn btn-block btn-warning my-2">
-                      Learn more
-                    </button> -->
+            <div class="col-12 col-sm-6 mb-3">
+              <div class="card border-0 bg-inverse">
+                <img
+                  class="card-img-top"
+                  src="/assets/img/services/640-pouring-cement-during-for-construction.jpg"
+                  alt="Card image cap"
+                />
+                <div
+                  class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
+                >
+                  <div class="overlay mb-0 p-2">
+                    <h4 class="card-title text-light gar">Fencing</h4>
+                    <div class="card-text text-center text-light mons -b-1">
+                      Foundations, Driveways, Patios, and Walkways
+                    </div>
                   </div>
                 </div>
               </div>
