--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Arvo&family=Bodoni+Moda&family=Cormorant+Garamond&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans:wght@300;400;700&family=Playfair&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Arvo&family=Bodoni+Moda&family=Cormorant+Garamond:wght@400;600&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans:wght@300;400;700&family=Playfair&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
@@ -145,10 +145,8 @@
                 <div
                   class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
                 >
-                  <div class="overlay mb-0 p-2">
-                    <h4 class="card-title text-light gar">
-                      General Construction
-                    </h4>
+                  <div class="d-overlay mb-0 p-2">
+                    <h4 class="card-title mus gar m-0">General Construction</h4>
                     <div class="card-text text-center text-light mons -b-1">
                       Residential, Commercial, Renovation, and Remodeling
                     </div>
@@ -166,7 +164,7 @@
                 <div
                   class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
                 >
-                  <div class="overlay mb-0 p-2">
+                  <div class="d-overlay mb-0 p-2">
                     <h4 class="card-title text-light gar">Concrete</h4>
                     <div class="card-text text-center text-light mons -b-1">
                       Foundations, Driveways, Patios, and Walkways
@@ -185,7 +183,7 @@
                 <div
                   class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
                 >
-                  <div class="overlay mb-0 p-2">
+                  <div class="overlay mb-0 p-1 pb-3">
                     <h4 class="card-title text-dark gar">Land Clearing</h4>
                     <div class="card-text text-center text-light mons -b-1">
                       Foundations, Driveways, Patios, and Walkways
