--- a/index.html
+++ b/index.html
@@ -224,7 +224,36 @@
           </p>
         </div>
       </section>
-      <section class="row py-4"></section>
+      <section class="row py-4">
+        <div class="container-fluid">
+          <div class="row d-flex justify-content-center m-3">
+            <h2 class="text-center mb-4">Why Choose Gire Construction?</h2>
+            <div class="col-lg-4 col-md-6 col-12">
+              <h4>Family Owned Business Based in Liberty, Texas</h4>
+              <p>
+                We believe that honesty and integrity are the backbones of any
+                business. Sticking to our family ideals when it comes to working
+                with our customers has been a great part of our success.
+              </p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+              <h4>Affordable Options</h4>
+              <p>
+                Let’s work together to find a solution that will help you build
+                the roof your home deserves.
+              </p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+              <h4>Quality Craftsmanship</h4>
+              <p>
+                We believe that honesty and integrity are the backbones of any
+                business. Sticking to our family ideals when it comes to working
+                with our customers has been a great part of our success.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- justify-content-center changes the alignment of flex items to center axis -->
     </main>
   </body>
