service card spacing issues

--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@
                   class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
                 >
                   <div class="d-overlay mb-0 p-2">
-                    <h4 class="card-title mus gar m-0">General Construction</h4>
-                    <div class="card-text text-center text-light mons -b-1">
+                    <h4 class="card-title gar text-light m-0">
+                      General Construction
+                    </h4>
+                    <div class="card-text text-center text-light mons">
                       Residential, Commercial, Renovation, and Remodeling
                     </div>
                   </div>
@@ -165,27 +167,12 @@
                   class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
                 >
                   <div class="d-overlay mb-0 p-2">
-                    <h4 class="card-title text-light gar">Concrete</h4>
-                    <div class="card-text text-center text-light mons -b-1">
-                      Foundations, Driveways, Patios, and Walkways
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 mb-3">
-              <div class="card border-0 bg-inverse">
-                <img
-                  class="card-img-top"
-                  src="/assets/img/services/640-pouring-cement-during-for-construction.jpg"
-                  alt="Card image cap"
-                />
-                <div
-                  class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
-                >
-                  <div class="overlay mb-0 p-1 pb-3">
-                    <h4 class="card-title text-dark gar">Land Clearing</h4>
-                    <div class="card-text text-center text-light mons -b-1">
+                    <h4 class="card-title text-light m-0 gar">Concrete</h4>
+                    <div
+                      class="my-1 mt-0 mus h-line p-0"
+                      style="border-top: 1px solid"
+                    ></div>
+                    <div class="card-text text-center text-light mons">
                       Foundations, Driveways, Patios, and Walkways
                     </div>
                   </div>
@@ -203,8 +190,27 @@
                   class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
                 >
                   <div class="overlay mb-0 p-2">
-                    <h4 class="card-title text-light gar">Fencing</h4>
-                    <div class="card-text text-center text-light mons -b-1">
+                    <h4 class="card-title text-dark m-0 gar">Land Clearing</h4>
+                    <div class="card-text text-center text-light mons">
+                      Foundations, Driveways, Patios, and Walkways
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 mb-3">
+              <div class="card border-0 bg-inverse">
+                <img
+                  class="card-img-top"
+                  src="/assets/img/services/640-pouring-cement-during-for-construction.jpg"
+                  alt="Card image cap"
+                />
+                <div
+                  class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
+                >
+                  <div class="overlay mb-0 p-2">
+                    <h4 class="card-title text-light m-0 gar">Fencing</h4>
+                    <div class="card-text text-center text-light mons">
                       Foundations, Driveways, Patios, and Walkways
                     </div>
                   </div>
@@ -226,10 +232,17 @@
       </section>
       <section class="row py-4">
         <div class="container-fluid">
+          <h2 class="text-center m-3">Why Choose Gire Construction?</h2>
+          <div
+            class="d-block mus s-line p-0"
+            style="border-top: 3px solid"
+          ></div>
           <div class="row d-flex justify-content-center m-3">
-            <h2 class="text-center mb-4">Why Choose Gire Construction?</h2>
             <div class="col-lg-4 col-md-6 col-12">
-              <h4>Family Owned Business Based in Liberty, Texas</h4>
+              <h4>
+                <span><img src="/assets/img/icons/check-circle.svg" /></span
+                >Family Owned Business Based in Liberty, Texas
+              </h4>
               <p>
                 We believe that honesty and integrity are the backbones of any
                 business. Sticking to our family ideals when it comes to working
@@ -237,14 +250,21 @@
               </p>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
-              <h4>Affordable Options</h4>
+              <h4>
+                <span class="q-icons"
+                  ><img src="/assets/img/icons/check-circle.svg" /></span
+                >Affordable Options
+              </h4>
               <p>
-                Let’s work together to find a solution that will help you build
+                Let's work together to find a solution that will help you build
                 the roof your home deserves.
               </p>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
-              <h4>Quality Craftsmanship</h4>
+              <h4>
+                <span><img src="/assets/img/icons/check-circle.svg" /></span
+                >Quality Craftsmanship
+              </h4>
               <p>
                 We believe that honesty and integrity are the backbones of any
                 business. Sticking to our family ideals when it comes to working
