--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Arvo&family=Bodoni+Moda&family=Cormorant+Garamond:wght@400;600&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans:wght@300;400;700&family=Playfair&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Merriweather:wght@300&family=Montserrat:wght@300;400&family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
@@ -230,16 +230,18 @@
           </p>
         </div>
       </section>
-      <section class="row py-4">
-        <div class="container-fluid">
-          <h2 class="text-center m-3">Why Choose Gire Construction?</h2>
+      <section class="row m-3 py-5">
+        <div class="container-fluid my-3">
+          <h2 class="text-center m-4 mb-4 mons-b">
+            Why Choose Gire Construction?
+          </h2>
           <div
-            class="d-block mus s-line p-0"
+            class="d-block mus s-line p-0 my-3 mb-1"
             style="border-top: 3px solid"
           ></div>
-          <div class="row d-flex justify-content-center m-3">
+          <div class="row d-flex justify-content-center mx-3 my-5">
             <div class="col-lg-4 col-md-6 col-12">
-              <h4>
+              <h4 class="merri">
                 <span><img src="/assets/img/icons/check-circle.svg" /></span
                 >Family Owned Business Based in Liberty, Texas
               </h4>
@@ -250,7 +252,7 @@
               </p>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
-              <h4>
+              <h4 class="merri">
                 <span class="q-icons"
                   ><img src="/assets/img/icons/check-circle.svg" /></span
                 >Affordable Options
@@ -261,7 +263,7 @@
               </p>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
-              <h4>
+              <h4 class="merri">
                 <span><img src="/assets/img/icons/check-circle.svg" /></span
                 >Quality Craftsmanship
               </h4>
