buttons and qualities layout

--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
               delivers exceptional craftsmanship and expertise to all our
               clients.
             </p>
-            <button class="btn btn-warning">Get A Quote</button>
+            <div class="container-fluid d-grid col-11 mx-auto">
+              <button class="btn btn-primary btn-warning rounded-0 mons-b" type="button">Get A Quote</button>
+            </div>
+          </div>
           </div>
         </div>
       </div>
@@ -219,8 +222,9 @@
             </div>
           </section>
         </div>
-        <div class="col-12 col-md-3 p-3">
-          <h2 class="servicesHeader d-none d-md-block">Our Services</h2>
+        <div class="col-12 col-md-3 p-3 d-flex flex-column">
+          <div class="col">
+            <h2 class="servicesHeader d-none d-md-block">Our Services</h2>
           <p>
             From precision concrete work to efficient land clearing and
             comprehensive construction solutions, we bring your vision to life.
@@ -228,50 +232,59 @@
             reliability of Gire Construction in bringing your construction
             projects to fruition.
           </p>
+          </div>
+          <div class="container-fluid d-grid col-11 mx-auto mb-4">
+            <button class="btn btn-primary btn-warning rounded-0 mons-b" type="button">Learn More</button>
+          </div>
         </div>
       </section>
       <section class="row m-3 py-5">
         <div class="container-fluid my-3">
-          <h2 class="text-center m-4 mb-4 mons-b">
+          <h1 class="text-center m-4 py-1 mons-b">
             Why Choose Gire Construction?
-          </h2>
+          </h1>
           <div
-            class="d-block mus s-line p-0 my-3 mb-1"
+            class="d-block mus s-line "
             style="border-top: 3px solid"
           ></div>
-          <div class="row d-flex justify-content-center mx-3 my-5">
-            <div class="col-lg-4 col-md-6 col-12">
-              <h4 class="merri">
-                <span><img src="/assets/img/icons/check-circle.svg" /></span
-                >Family Owned Business Based in Liberty, Texas
-              </h4>
-              <p>
-                We believe that honesty and integrity are the backbones of any
-                business. Sticking to our family ideals when it comes to working
-                with our customers has been a great part of our success.
-              </p>
+          <div class="py-1">
+            <div class="row d-flex justify-content-center mx-3 mt-5 mb-4 ">
+              <div class="col-lg-4 col-md-6 col-12">
+                <h4 class="merri">
+                  <span><img src="/assets/img/icons/check-circle.svg" /></span
+                  >Family Owned Business Based in Liberty, Texas
+                </h4>
+                <p>
+                  We believe that honesty and integrity are the backbones of any
+                  business. Sticking to our family ideals when it comes to working
+                  with our customers has been a great part of our success.
+                </p>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <h4 class="merri">
+                  <span class="q-icons"
+                    ><img src="/assets/img/icons/check-circle.svg" /></span
+                  >Affordable Options
+                </h4>
+                <p>
+                  Let's work together to find a solution that will help you build
+                  the roof your home deserves.
+                </p>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <h4 class="merri">
+                  <span><img src="/assets/img/icons/check-circle.svg" /></span
+                  >Quality Craftsmanship
+                </h4>
+                <p>
+                  We believe that honesty and integrity are the backbones of any
+                  business. Sticking to our family ideals when it comes to working
+                  with our customers has been a great part of our success.
+                </p>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-12">
-              <h4 class="merri">
-                <span class="q-icons"
-                  ><img src="/assets/img/icons/check-circle.svg" /></span
-                >Affordable Options
-              </h4>
-              <p>
-                Let's work together to find a solution that will help you build
-                the roof your home deserves.
-              </p>
-            </div>
-            <div class="col-lg-4 col-md-6 col-12">
-              <h4 class="merri">
-                <span><img src="/assets/img/icons/check-circle.svg" /></span
-                >Quality Craftsmanship
-              </h4>
-              <p>
-                We believe that honesty and integrity are the backbones of any
-                business. Sticking to our family ideals when it comes to working
-                with our customers has been a great part of our success.
-              </p>
+            <div class="container-fluid d-grid col-6 my-5">
+              <button class="btn btn-primary btn-warning rounded-0 mons-b" type="button">Get A Quote</button>
             </div>
           </div>
         </div>
