spacing in services

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </header>
 
     <main class="container-fluid">
-      <section class="row services py-4">
+      <section class="row services my-5 py-5">
         <h2 class="servicesHeader d-block d-md-none">Our Services</h2>
         <div class="col-12 col-md-9 p-3">
           <section class="row justify-content-around">
@@ -289,6 +289,7 @@
           </div>
         </div>
       </section>
+      
       <!-- justify-content-center changes the alignment of flex items to center axis -->
     </main>
   </body>
