--- a/index.html
+++ b/index.html
@@ -299,24 +299,18 @@
           <img height="60" src="/assets/img/icons/gire-nav-logo.png"/>
         </div>
         <hr class="w-100 clearfix d-md-none" />
-        <div class="col-md-2 mx-3 my-3">
+        <div class="col-md-2 mx-3 my-3 flex-column">
           <h6 class="text-uppercase mb-2 font-weight-bold mons-b mus">SERVICES</h6>
-          <p class="my-1">
-            <a class="text-white open-sans">Land Clearing</a>
-          </p>
-          <p class="my-1">
-            <a class="text-white open-sans">Concrete</a>
-          </p>
-          <p class="my-1">
-            <a class="text-white open-sans">General Construction</a>
-          </p>
+            <a class="my-1 open-sans footer-links text-decoration-none d-block" href="#">Land Clearing</a>
+            <a class="my-1 open-sans footer-links text-decoration-none d-block" href="#">Concrete</a>
+            <a class="my-1 open-sans footer-links text-decoration-none d-block" href="#">General Construction</a>
         </div>
         <hr class="w-100 clearfix my-3 d-md-none" />
         <div class="col-md-2 mx-3 my-3">
           <h6 class="text-uppercase mb-2 font-weight-bold mons-b mus">Contact</h6>
           
-          <p class="my-1 open-sans "><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-          <a class="my-1 open-sans text-light text-decoration-none" href="tel:123-456-7890"><span><img src="/assets/img/icons/telephone-fill.svg" /></span> (123) 456-7890</a>
+          <a class="my-1 open-sans d-block text-decoration-none footer-links" href="#"><i class="fas fa-envelope mr-3"></i> info@gmail.com</a>
+          <a class="my-1 open-sans text-decoration-none footer-links" href="tel:123-456-7890"><span><img src="/assets/img/icons/telephone-fill.svg" /></span> (123) 456-7890</a>
           
         </div>
       </div>
