footer icon mask

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           </a>
         </div>
       </div>
-      <hr class="my-3" />
+      <hr class="my-2" />
       <section class="p-3 pt-0">
         <div class="row d-flex align-items-center">
           <div class="col-md-7 col-lg-8 text-center text-md-start">
@@ -365,14 +365,17 @@
           </div>
           <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
             <!-- Facebook -->
-            <a class="btn btn-floating footer-links" role="button" href="#"
-              ><img src="/assets/img/icons/fb.svg" />
-            </a>
             <a
-              class="btn btn-floating mus footer-links colorize-pink"
+              class="btn btn-floating footer-icon-links footer-fb p-4"
               role="button"
               href="#"
-              ><img class="colorize-pink" src="/assets/img/icons/insta.svg" />
+            >
+            </a>
+            <a
+              class="btn btn-floating footer-icon-links footer-insta p-4"
+              role="button"
+              href="#"
+            >
             </a>
           </div>
         </div>
