--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbar">
+        <div class="collapse navbar-collapse text-center" id="navbar">
           <div class="navbar-nav ms-auto">
             <a class="nav-item nav-link custom-nav-link" href="#">ABOUT US</a>
             <a class="nav-item nav-link custom-nav-link" href="#"
@@ -354,17 +354,16 @@
       </div>
       <hr class="my-2" />
       <section class="p-3 pt-0">
-        <div class="row d-flex align-items-center">
-          <div class="col-md-7 col-lg-8 text-center text-md-start">
+        <div class="row d-flex align-items-center mons">
+          <div class="col-md-7 col-lg-8 text-center text-md-start opacity-50">
             <div class="p-3">
-              © 2020 Copyright:
+              Design by
               <a class="text-white" href="https://mdbootstrap.com/"
-                >MDBootstrap.com</a
+                >Jenny Trevizo</a
               >
             </div>
           </div>
           <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
-            <!-- Facebook -->
             <a
               class="btn btn-floating footer-icon-links footer-fb p-4"
               role="button"
