--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Merriweather:wght@300&family=Montserrat:wght@300;400&family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Gire Construction</title>
 
     <link
       rel="icon"
       type="image/png"
-      href="assets/img/icons/frontloader-logo.png"
+      href="./assets/img/icons/frontloader-logo.png"
     />
   </head>
 
@@ -36,7 +36,7 @@
         <a class="navbar-brand" href="#" style="margin-left: 1.5rem">
           <img
             class="img-responsive"
-            src="assets/img/icons/gire-nav-logo.png"
+            src="./assets/img/icons/gire-nav-logo.png"
             alt="Gire Construction Logo"
             height="60"
           />
@@ -57,12 +57,12 @@
             <a class="nav-item nav-link custom-nav-link" href="#">ABOUT US</a>
             <a class="nav-item nav-link custom-nav-link" href="#"
               >SERVICES<span class="caret"
-                ><img src="assets/img/icons/caret-down-fill.svg" /></span
+                ><img src="./assets/img/icons/caret-down-fill.svg" /></span
             ></a>
             <a class="nav-item nav-link custom-nav-link" href="#">GALLERY</a>
             <a class="nav-item nav-link custom-nav-link" href="#">CONTACT</a>
             <a class="nav-item nav-link custom-nav-link" href="tel:123-456-7890"
-              ><span><img src="assets/img/icons/telephone-fill.svg" /></span>
+              ><span><img src="./assets/img/icons/telephone-fill.svg" /></span>
               (123)456-7890</a
             >
           </div>
@@ -82,28 +82,28 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="assets/img/carousel/george-pastushok-d0yNnTEjEWY-unsplash.jpg"
+                    src="./assets/img/carousel/george-pastushok-d0yNnTEjEWY-unsplash.jpg"
                     class="d-block w-100"
                     alt="..."
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="assets/img/carousel/milivoj-kuhar-Te48TPzdcU8-unsplash.jpg"
+                    src="./assets/img/carousel/milivoj-kuhar-Te48TPzdcU8-unsplash.jpg"
                     class="d-block w-100"
                     alt="..."
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="assets/img/carousel/marek-novotny-sAYjHNsD0rI-unsplash.jpg"
+                    src="./assets/img/carousel/marek-novotny-sAYjHNsD0rI-unsplash.jpg"
                     class="d-block w-100"
                     alt="..."
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="assets/img/carousel/samuel-cruz-m7JngCMSQvc-unsplash.jpg"
+                    src="./assets/img/carousel/samuel-cruz-m7JngCMSQvc-unsplash.jpg"
                     class="d-block w-100"
                     alt="..."
                   />
@@ -114,7 +114,7 @@
           <div class="col-12 col-md-5 mt-3">
             <img
               class="landingName mb-2"
-              src="assets/img/GireName.png"
+              src="./assets/img/GireName.png"
               alt="Gire Construction Brand"
             />
             <p>
@@ -146,7 +146,7 @@
               <div class="card border-0 bg-inverse">
                 <img
                   class="card-img-top"
-                  src="assets/img/services/plans.jpg"
+                  src="./assets/img/services/plans.jpg"
                   alt="Card image cap"
                 />
                 <div
@@ -167,7 +167,7 @@
               <div class="card border-0 bg-inverse">
                 <img
                   class="card-img-top"
-                  src="assets/img/services/640-pouring-cement-during-for-construction.jpg"
+                  src="./assets/img/services/640-pouring-cement-during-for-construction.jpg"
                   alt="Card image cap"
                 />
                 <div
@@ -190,7 +190,7 @@
               <div class="card border-0 bg-inverse">
                 <img
                   class="card-img-top"
-                  src="assets/img/services/640-pouring-cement-during-for-construction.jpg"
+                  src="./assets/img/services/640-pouring-cement-during-for-construction.jpg"
                   alt="Card image cap"
                 />
                 <div
@@ -209,7 +209,7 @@
               <div class="card border-0 bg-inverse">
                 <img
                   class="card-img-top"
-                  src="assets/img/services/640-pouring-cement-during-for-construction.jpg"
+                  src="./assets/img/services/640-pouring-cement-during-for-construction.jpg"
                   alt="Card image cap"
                 />
                 <div
@@ -257,7 +257,7 @@
             <div class="row d-flex justify-content-center mx-3 mt-5 mb-4">
               <div class="col-lg-4 col-md-6 col-12">
                 <h4 class="merri">
-                  <span><img src="assets/img/icons/check-circle.svg" /></span
+                  <span><img src="./assets/img/icons/check-circle.svg" /></span
                   >Family Owned Business Based in Liberty, Texas
                 </h4>
                 <p>
@@ -270,7 +270,7 @@
               <div class="col-lg-4 col-md-6 col-12">
                 <h4 class="merri">
                   <span class="q-icons"
-                    ><img src="assets/img/icons/check-circle.svg" /></span
+                    ><img src="./assets/img/icons/check-circle.svg" /></span
                   >Affordable Options
                 </h4>
                 <p>
@@ -280,7 +280,7 @@
               </div>
               <div class="col-lg-4 col-md-6 col-12">
                 <h4 class="merri">
-                  <span><img src="assets/img/icons/check-circle.svg" /></span
+                  <span><img src="./assets/img/icons/check-circle.svg" /></span
                   >Quality Craftsmanship
                 </h4>
                 <p>
@@ -308,7 +308,7 @@
         <div
           class="col-md-7 px-5 my-3 img-responsive d-flex justify-content-center justify-content-md-start align-items-center"
         >
-          <img height="60" src="assets/img/icons/gire-nav-logo.png" />
+          <img height="60" src="./assets/img/icons/gire-nav-logo.png" />
         </div>
         <hr class="w-100 clearfix d-md-none" />
         <div class="col-md-2 mx-3 my-3 flex-column">
@@ -341,14 +341,14 @@
             class="my-1 open-sans d-block text-decoration-none footer-links"
             href="#"
           >
-            <img class="p-1" src="assets/img/icons/env.svg" /> info@gmail.com
+            <img class="p-1" src="./assets/img/icons/env.svg" /> info@gmail.com
           </a>
           <a
             class="my-1 open-sans text-decoration-none footer-links"
             href="tel:123-456-7890"
           >
-            <img class="p-1" src="assets/img/icons/telephone-fill.svg" /> (123)
-            456-7890
+            <img class="p-1" src="./assets/img/icons/telephone-fill.svg" />
+            (123) 456-7890
           </a>
         </div>
       </div>
@@ -388,5 +388,5 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"
   ></script>
-  <script src="assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </html>
