--- a/index.html
+++ b/index.html
@@ -358,9 +358,7 @@
           <div class="col-md-7 col-lg-8 text-center text-md-start opacity-50">
             <div class="p-3">
               Design by
-              <a class="text-white" href="https://mdbootstrap.com/"
-                >Jenny Trevizo</a
-              >
+              <a class="text-white" href="#">Jenny Trevizo</a>
             </div>
           </div>
           <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
