--- a/src/static/index.html
+++ b/src/static/index.html
@@ -156,6 +156,10 @@
                     <h4 class="card-title gar text-light m-0">
                       General Construction
                     </h4>
+                    <div
+                      class="my-1 mt-0 mus h-line p-0"
+                      style="border-top: 1px solid"
+                    ></div>
                     <div class="card-text text-center text-light mons">
                       Residential, Commercial, Renovation, and Remodeling
                     </div>
@@ -196,8 +200,12 @@
                 <div
                   class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
                 >
-                  <div class="overlay mb-0 p-2">
-                    <h4 class="card-title text-dark m-0 gar">Land Clearing</h4>
+                  <div class="d-overlay mb-0 p-2">
+                    <h4 class="card-title text-light m-0 gar">Land Clearing</h4>
+                    <div
+                      class="my-1 mt-0 mus h-line p-0"
+                      style="border-top: 1px solid"
+                    ></div>
                     <div class="card-text text-center text-light mons">
                       Foundations, Driveways, Patios, and Walkways
                     </div>
@@ -215,8 +223,12 @@
                 <div
                   class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0"
                 >
-                  <div class="overlay mb-0 p-2">
+                  <div class="d-overlay mb-0 p-2">
                     <h4 class="card-title text-light m-0 gar">Fencing</h4>
+                    <div
+                      class="my-1 mt-0 mus h-line p-0"
+                      style="border-top: 1px solid"
+                    ></div>
                     <div class="card-text text-center text-light mons">
                       Foundations, Driveways, Patios, and Walkways
                     </div>
